# sysmosis

./: .gitignore  CLAUDE.md  README.md  TODO.md  alarms.py  config.py.example  deploy.py  main.py  metrics.py  pyproject.toml  pyrightconfig.json  webserver.py
firmware/: README.md  platformio.ini
firmware/data/static/: app.js  index.html
firmware/include/: config.h  state.h
firmware/src/: AlarmManager.cpp  AlarmManager.h  ROController.cpp  ROController.h  WebInterface.cpp  WebInterface.h  main.cpp
static/: login.html  style.css
